[package]
name = "bedrock-cost"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "Calculate AWS Bedrock invocation cost across vendors (Llama, Mistral, Cohere, Titan, AI21). Cross-region inference profile aware. No SDK dependency."
authors = ["Mukunda Rao Katta <mukunda.vjcs6@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/MukundaKatta/bedrock-cost"
homepage = "https://github.com/MukundaKatta/bedrock-cost"
documentation = "https://docs.rs/bedrock-cost"
readme = "README.md"
keywords = ["aws", "bedrock", "llm", "cost", "pricing"]
categories = ["api-bindings", "science"]
exclude = [".github/*", "target/*"]

[dependencies]
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]

[dev-dependencies]
serde_json = "1"
